# mg5x

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
.github/: CODEOWNERS
include/mg5x/: image_capture_node.hpp  mg5x_camera.hpp  offboard_controller_node.hpp  session.hpp  state.hpp  tile_generator.hpp
src/: image_capture_node.cpp  main.cpp  mg5x_camera.cpp  offboard_controller_node.cpp  session.cpp
